addd license; unique timestamps

--- a/.env.example
+++ b/.env.example
@@ -17,4 +17,4 @@ MEMORY_RETENTION_DAYS=5
 # Conversation Settings
 MAX_ROUNDS=50
 DELAY_BETWEEN_MSG=3s
-OUTPUT_FILE=conversations/therapy_session.json
+# OUTPUT_FILE=conversations/therapy_session.json  # Optional: defaults to timestamped filename (YYYY-MM-DD_HH)
